[fix] Sync direcotry

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the repository
+    # Checkout repository
     - name: Checkout Code
       uses: actions/checkout@v3
 
